# mdflux

./: README.md  pyproject.toml
src/mdflux/: __init__.py  __main__.py  markdown.py  shell.py
src/updatemd/: __init__.py  __main__.py  markdown.py  tagparsing.py
tests/: test_update.py
