[project]
name = "updatemd"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Spence Sellers", email = "spencesellers@gmail.com" }
]

dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
mdflux = 'updatemd.__main__:cli'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/updatemd"]
